fix: squished images on mobile

--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -121,6 +121,7 @@ body {
 
     img {
       max-width: 100%;
+      height: auto;
     }
   }
 }
